--- a/js/jst/home/table.html
+++ b/js/jst/home/table.html
@@ -4,6 +4,7 @@
             <th>Company name</th>
             <th>Departure time</th>
             <th>Arrival time</th>
+            <th>Travel time</th>
             <th>Cost</th>
             <th>Link</th>
         </tr>
@@ -14,6 +15,7 @@
             <td><%=schedule.COMPANY_NAME %></td>
             <td><%=schedule.DEPART_TIME %></td>
             <td><%=schedule.ARRIVE_TIME %></td>
+            <td><%=schedule.TRIP_LENGTH %></td>
             <td><%= "$" + schedule.TRIP_COST %></td>
             <td><%="SOON" %></td>
         </tr>
