--- a/js/jst/home/table.html
+++ b/js/jst/home/table.html
@@ -1,12 +1,13 @@
 <table class="table table-striped">
     <thead>
         <tr>
-            <th>Company name<i class="tablesorter-icon bootstrap-icon-unsorted"></i></th>
+            <th>Company<i class="tablesorter-icon bootstrap-icon-unsorted"></i></th>
             <th>Departure time<i class="tablesorter-icon bootstrap-icon-unsorted"></i></th>
             <th>Arrival time<i class="tablesorter-icon bootstrap-icon-unsorted"></i></th>
             <th>Travel time<i class="tablesorter-icon bootstrap-icon-unsorted"></i></th>
             <th>Cost<i class="tablesorter-icon bootstrap-icon-unsorted"></i></th>
             <th>Link<i class="tablesorter-icon bootstrap-icon-unsorted"></i></th>
+            <th>Map<i class="tablesorter-icon bootstrap-icon-unsorted"></i></th>
         </tr>
     </thead>
     <tbody>
@@ -17,7 +18,8 @@
             <td><%=schedule.ARRIVE_TIME %></td>
             <td><%=schedule.TRIP_LENGTH %></td>
             <td><%= "$" + schedule.TRIP_COST %></td>
-            <td><a href="<%=schedule.URL %>" target="_blank">Go</a></td>
+            <td><a href="<%= schedule.URL %>" target="_blank">Go</a></td>
+            <td><a href="<%= baseurl %>map?company=<%=schedule.COMPANY_NAME %>&arrive=<%=schedule.ARRIVE_CITY %>&depart=<%=schedule.DEPART_CITY %>">Stations</a></td>
         </tr>
     <% }) %>
     </tbody>
