--- a/js/jst/map/info.html
+++ b/js/jst/map/info.html
@@ -1,2 +1,5 @@
-<h5 class="centered"><%= item[0].address %></h5>
-<p class="centered"><%= item[0].description %></p>
+<div style="height: 130px">
+    <strong><p class="centered"><%= item[0].company_name %></p></strong>
+    <p class="centered"><%= item[0].description %></p>
+    <p class="centered"><%= item[0].address %></p>
+</div>
