slider, bug fixes

--- a/js/jst/map/info.html
+++ b/js/jst/map/info.html
@@ -1,4 +1,4 @@
-<div style="height: 130px">
+<div class="info-map">
     <strong><p class="centered"><%= item[0].company_name %></p></strong>
     <p class="centered"><%= item[0].description %></p>
     <p class="centered"><%= item[0].address %></p>
