--- a/js/jst/map/info.html
+++ b/js/jst/map/info.html
@@ -2,4 +2,5 @@
     <strong><p class="centered"><%= item[0].company_name %></p></strong>
     <p class="centered"><%= item[0].description %></p>
     <p class="centered"><%= item[0].address %></p>
+    <p class="centered"><a href="javascript: index.close_info(<%= info_index %>, '<%= map %>')">Close</a></p>
 </div>
