--- a/js/jst/company/comment.html
+++ b/js/jst/company/comment.html
@@ -1,6 +1,6 @@
 
 <hr>
-<div class="row-fluid">
+<div class="row-fluid form-actions comment-row">
     <div class="span8">
         <div class="control-group">
             <div class="controls">
