--- a/js/jst/company/comment.html
+++ b/js/jst/company/comment.html
@@ -14,25 +14,25 @@
                     <div class="span6">
                         <div class="row-fluid">
                             <div class="span4">Timeliness:</div>
-                            <div id="timeliness<%= comment.id %>" class="span9 pull-right"></div>
+                            <div id="timeliness<%= comment.id %>" class="span8"></div>
                         </div>
                         <div class="row-fluid">
                             <div class="span4">Comfort:</div>
-                            <div id="comfort<%= comment.id %>" class="span9 pull-right"></div>
+                            <div id="comfort<%= comment.id %>" class="span8"></div>
                         </div>
                         <div class="row-fluid">
                             <div class="span4">WiFi:</div>
-                            <div id="wifi<%= comment.id %>" class="span9 pull-right"></div>
+                            <div id="wifi<%= comment.id %>" class="span8"></div>
                         </div>
                     </div>
                     <div class="span6">
                         <div class="row-fluid">
                             <div class="span4">Empty seating:</div>
-                            <div id="empty-seating<%= comment.id %>" class="span9 pull-right"></div>
+                            <div id="empty-seating<%= comment.id %>" class="span8"></div>
                         </div>
                         <div class="row-fluid">
                             <div class="span4">Cleanliness:</div>
-                            <div id="cleanliness<%= comment.id %>" class="span9 pull-right"></div>
+                            <div id="cleanliness<%= comment.id %>" class="span8"></div>
                         </div>
                     </div>
                 </div>
